--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "email-js": "^2.0.2",
+    "firebase": "^10.8.1",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -21,7 +22,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4",
-    "wow.js": "^1.2.2"
+    "wow.js": "^1.2.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
